# CashMachine-Refactoring-Kata

./: .gitignore  README.md
c/: CMakeLists.txt  README.md
c/src/: CMakeLists.txt  account.c  account.h  branch_finder.c  branch_finder.h  cash.c  cash.h  cash_machine.c  cash_machine.h  personal_accounts.c  personal_accounts.h
c/test-catch2/: sample_catch.cpp
c/test-cmocka/: CMakeLists.txt
c/test-cmocka/sample_test/: sample_test.c
c/test-cmocka/simple_test/: CMakeLists.txt
c/test-cmocka/uptime/: CMakeLists.txt  README.md
c/test-gtest/: sample_gtest.cpp
csharp/: .gitignore
csharp/BankAccount/: BankAccount.sln
csharp/BankAccount/BankAccount/: AccountAccess.cs  BankAccount.cs  BankAccount.csproj  Branch.cs  BranchFinder.cs  CashMachine.cs  Customer.cs  PersonalAccountsManager.cs
csharp/BankAccount/Examples/: Car.cs  DeliveryService.cs  Person.cs
go/bankaccount/: account.go  account_manager.go  branch.go  branch_finder.go  cash_machine.go  go.mod
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/banking/: BankAccount.java  BankAccounts.java  Branch.java  BranchFinder.java  (+2 more)
python/bankaccount/: account.py  accounts_manager.py  branch.py  branch_finder.py  cash_machine.py
swift/: Package.swift
swift/Sources/swift/: account.swift  accounts_manager.swift  branch.swift  branch_finder.swift  cash_machine.swift
swift/Tests/swiftTests/: swiftTests.swift
typescript/: .eslintrc  jest.config.js  package.json  tsconfig.json
typescript/src/: BankAccount.ts  Branch.ts  BranchFinder.ts  CashMachine.ts  PersonalAccountsManager.ts
(+12 files in other folders)
